# H264Rtmp

app/: CMakeLists.txt  build.gradle
app/libs/lib/pkgconfig/: x264.pc
app/src/androidTest/java/com/ocean/rtmp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/ocean/rtmp/: IMyAidlInterface.aidl
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/ocean/rtmp/: Book.java  MainActivity.java  MessengerService.java  Test.java  User.java
app/src/main/java/com/ocean/rtmp/params/: AudioParams.java  VideoParams.java
app/src/main/java/com/ocean/rtmp/push/: AudioPusher.java  LivePusher.java  PushNative.java  Pusher.java  VideoPusher.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ocean/rtmp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
